# live-spotify-lyrics

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
src/: genius_scraper.rs  main.rs  spotify_mem_reader.rs
src/main/kotlin/: Main.kt
src/main/kotlin/lyrics/: GeniusLyricsApi.kt  LyricCache.kt  LyricsApi.kt
src/main/kotlin/memory/: SpotifyApi.kt  SpotifyMemoryReader.kt
src/main/kotlin/ui/: CurrentSongView.kt  LyricsView.kt  SpotifyLyricsApp.kt  SpotifyLyricsView.kt
