[package]
name = "live-spotify-lyrics-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["canvas", "tokio", "debug"] }
chrono = "0.4.19"
sysinfo = "0.19.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["tlhelp32"] }