[package]
name = "live-spotify-lyrics-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7.0"
reqwest = { version = "0.11.4", features = ["blocking", "serde_json", "json"]}
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
select = "0.5.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["tlhelp32", "psapi", "memoryapi"] }